force-app/main/default/objects/IR_35_Review__c/IR_35_Review__c.object-meta.xml
<CustomObject>
    <description>Represents individual reviews performed on IR35.io service by the customer.</description>
    <label>IR 35 Review</label>
    <nameField>
        <label>IR 35 Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IR 35 Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>