force-app/main/default/objects/IR_35_Review__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>