force-app/main/default/objects/IR_35_Review__c/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <label>End Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>