force-app/main/default/objects/IR_35_Review__c/fields/Estimated_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Company_Size__c</fullName>
    <label>Estimated Company Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>