force-app/main/default/objects/IR_35_Review__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>IR 35 Reviews</relationshipLabel>
    <relationshipName>IR_35_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>