force-app/main/default/objects/IR_35_Review__c/fields/Referred_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Name__c</fullName>
    <label>Referred By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>