force-app/main/default/objects/IR_35_Review__c/fields/Remaining_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Reviews__c</fullName>
    <label>Remaining Reviews</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>