force-app/main/default/objects/IR_35_Review__c/fields/Review_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Performed_Date__c</fullName>
    <label>Review Performed Date</label>
    <type>DateTime</type>
</CustomField>