force-app/main/default/objects/IR_35_Review__c/fields/Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value__c</fullName>
    <label>Sale Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>